# Agentic_AI_Piaic_course

./: Panaversity Certified Agentic and Robotic AI Engineer (1).docx  README.md
on_site_class_101_python/: 18_may2025.ipynb  26_april.ipynb
uv/: uv_01.ipynb
uv/explore-uv/: pyproject.toml
