[project]
name = "explore-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danish Mehmood", email = "danishmehmood1887@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
explore-uv = "explore_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
